Fix module tags not wrapping in user profile panel

--- a/src/main/resources/view/UserProfilePanel.css
+++ b/src/main/resources/view/UserProfilePanel.css
@@ -10,6 +10,7 @@
     -fx-font-size: 14px;
     -fx-text-fill: #4d4d4d;
     -fx-padding: 2;
+    -fx-wrap-text: true;
 }
 
 #userProfilePane {
